projects/vb6parse/snapshots/parsers/cst/file_operations/put/put_after_get.snap
---
source: projects/vb6parse/tests/file_operations/put.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: GetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: GetKeyword
                  text: Get
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: recordNum
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: myRecord
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: EndOfLineComment
              text: "' Modify the record"
            - kind: Newline
              text: "\n"
            - kind: PutStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PutKeyword
                  text: Put
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Octothorpe
                      text: "#"
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: recordNum
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: myRecord
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
